ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  cart_mapping
      prefix: /
      host: cart.23.101.20.50.xip.io
      service: cart-service:80
spec:
  ports:
  - name: cart
    port: 80
