cart-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  selector:
    matchLabels:
      app: cart-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: venkateshbr/cart-service:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: application-config 
          mountPath: "/deployments/config" 
          readOnly: true
      volumes:
      - name: application-config
        configMap:
          name: cart-service-config 
          items:
          - key: application.properties 
            path: application.properties
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cart-service
  type: ClusterIP
